output image version

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,10 @@ on:
       registry:
         required: true
         type: string
+    outputs:
+      version:
+        description: "Semver version for image tag"
+        value: ${{ jobs.build.outputs.version }}
 
 jobs:
   setup:
