add context path var

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,10 @@ on:
       registry:
         required: true
         type: string
+      context:
+        required: false
+        type: string
+        default: .
     outputs:
       version:
         description: "Semver version for image tag"
@@ -52,7 +56,7 @@ jobs:
       - run: |
           docker build -f ${{ inputs.dockerfile }} \
             -t ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }} \
-            -t ${{ inputs.registry }}/${{ inputs.app_name }}:latest .
+            -t ${{ inputs.registry }}/${{ inputs.app_name }}:latest ${{ inputs.context }}
           docker push ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }}
           docker push ${{ inputs.registry }}/${{ inputs.app_name }}:latest
     outputs:
