--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,7 +13,7 @@ on:
       registry:
         required: true
         type: string
-      context:
+      context_path:
         required: false
         type: string
         default: .
@@ -56,7 +56,7 @@ jobs:
       - run: |
           docker build -f ${{ inputs.dockerfile }} \
             -t ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }} \
-            -t ${{ inputs.registry }}/${{ inputs.app_name }}:latest ${{ inputs.context }}
+            -t ${{ inputs.registry }}/${{ inputs.app_name }}:latest ${{ inputs.context_path }}
           docker push ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }}
           docker push ${{ inputs.registry }}/${{ inputs.app_name }}:latest
     outputs:
