--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -74,8 +74,14 @@ jobs:
       - name: Publish changed workspaces
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          yarn workspaces foreach -A -v --no-private npm publish --access public --tolerate-republish
+          # Use npm directly to publish (avoids Yarn npm plugin quirks) and skip non-packages
+          for pkg in packages/*; do
+            if [ -f "$pkg/package.json" ]; then
+              (cd "$pkg" && npm publish --access public --provenance || true)
+            fi
+          done
 
       - name: Create and push tag for this release
         env:
