--- a/packages/web-utils/package.json
+++ b/packages/web-utils/package.json
@@ -15,6 +15,10 @@
     "files": [
         "build"
     ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org"
+    },
     "scripts": {
         "build": "tsup",
         "clean": "rimraf build",
