--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,11 @@
 nodeLinker: node-modules
-npmPublishAccess: public
+npmAlwaysAuth: false
+npmRegistryServer: "https://registry.npmjs.org"
+npmRegistries:
+  "https://npm.pkg.github.com":
+    npmAlwaysAuth: true
+    npmAuthToken: "${PAT_TOKEN}"
 
-
+npmScopes:
+  igor-siergiej:
+    npmRegistryServer: "https://npm.pkg.github.com"
