exclude vite config from typescript

--- a/packages/api-utils/tsconfig.json
+++ b/packages/api-utils/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "../../tsconfig.json",
     "include": [
         "src/**/*",
-        "tests/**/*"
+    ],
+    "exclude": [
+        "vitest.config.ts"
     ],
     "compilerOptions": {
         "outDir": "build",
