--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,13 @@ on:
       registry:
         required: true
         type: string
+      build_args:
+        required: false
+        type: string
+        default: ""
+    secrets:
+      PAT_TOKEN:
+        required: true
     outputs:
       version:
         description: "Semver version for image tag"
@@ -49,12 +56,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: corepack enable
-      - run: |
-          docker build -f ${{ inputs.dockerfile }} \
-            --build-arg PAT_TOKEN=${{ secrets.PAT_TOKEN }} \
-            -t ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }} \
-            -t ${{ inputs.registry }}/${{ inputs.app_name }}:latest .
-          docker push ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }}
-          docker push ${{ inputs.registry }}/${{ inputs.app_name }}:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ inputs.dockerfile }}
+          build-args: ${{ inputs.build_args }}
+          tags: |
+            ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }}
+            ${{ inputs.registry }}/${{ inputs.app_name }}:latest
+          push: true
+          secrets: |
+            PAT_TOKEN=${{ secrets.PAT_TOKEN }}
     outputs:
       version: ${{ needs.setup.outputs.version }}
