--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -58,6 +58,11 @@ jobs:
       - run: corepack enable
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          config-inline: |
+            [registry."192.168.68.54:31834"]
+              http = true
+              insecure = true
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
