--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -70,7 +70,9 @@ jobs:
         with:
           context: .
           file: ${{ inputs.dockerfile }}
-          build-args: ${{ inputs.build_args }}
+          build-args: |
+            APP_VERSION=${{ needs.setup.outputs.version }}
+            ${{ inputs.build_args }}
           tags: |
             ${{ inputs.registry }}/${{ inputs.app_name }}:${{ needs.setup.outputs.version }}
             ${{ inputs.registry }}/${{ inputs.app_name }}:latest
