add in PAT_TOKEN for the bump package.json step

--- a/.github/workflows/gitops-update.yml
+++ b/.github/workflows/gitops-update.yml
@@ -20,6 +20,8 @@ jobs:
   update:
     runs-on: [self-hosted, linux, x64]
     if: github.ref == 'refs/heads/main'
+    env:
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
     steps:
       - uses: actions/checkout@v4
         with:
