--- a/.github/workflows/gitops-update.yml
+++ b/.github/workflows/gitops-update.yml
@@ -32,15 +32,13 @@ jobs:
         run: |
           set -euo pipefail
           VERSION=${{ inputs.version }}
-          # Use Yarn to update versions (npm doesn't support workspace:* protocol)
-          corepack enable
-          corepack prepare yarn@4.9.2 --activate
-          # Root workspace
-          yarn version set "$VERSION"
-          # All workspaces
-          yarn workspaces foreach -A exec yarn version set "$VERSION"
-          # Ensure lockfile stays consistent (optional)
-          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install --mode=update-lockfile
+          # Update versions directly without relying on package managers
+          for file in package.json packages/*/package.json; do
+            if [ -f "$file" ]; then
+              node -e "const fs=require('fs'); const f=process.argv[1]; const v=process.argv[2]; const j=JSON.parse(fs.readFileSync(f,'utf8')); j.version=v; fs.writeFileSync(f, JSON.stringify(j, null, 4)+'\\n');" "$file" "$VERSION"
+              echo "Bumped $file to $VERSION"
+            fi
+          done
           git config user.email "argonaut-bot@users.noreply.github.com"
           git config user.name "argonaut-bot"
           git add -A
