--- a/.github/workflows/gitops-update.yml
+++ b/.github/workflows/gitops-update.yml
@@ -42,7 +42,7 @@ jobs:
           git config user.email "argonaut-bot@users.noreply.github.com"
           git config user.name "argonaut-bot"
           git add -A
-          git commit -m "chore: bump package versions to $VERSION" || echo "No changes to commit"
+          git commit -m "chore: bump package versions to $VERSION [skip ci]" || echo "No changes to commit"
           git push origin HEAD:main
 
       - name: Create git tag
