--- a/packages/api-utils/package.json
+++ b/packages/api-utils/package.json
@@ -28,19 +28,28 @@
         "build": "tsup",
         "clean": "rimraf build",
         "prepack": "yarn clean && yarn build",
+        "lint": "eslint . --ext .ts,.mts,.cts",
+        "lint:fix": "eslint . --ext .ts,.mts,.cts --fix",
         "test": "vitest run --coverage",
         "test:watch": "vitest"
     },
     "sideEffects": false,
     "devDependencies": {
+        "@eslint/js": "^9.33.0",
+        "@stylistic/eslint-plugin": "^5.2.3",
         "@types/node": "^24.3.0",
         "@vitest/coverage-v8": "^3.2.4",
+        "eslint": "^9.33.0",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "rimraf": "^6.0.1",
         "tsup": "^8.5.0",
         "typescript": "^5.9.2",
         "vitest": "^3.2.4"
     },
     "dependencies": {
+        "minio": "^8.0.0",
         "mongodb": "^6.19.0"
     }
 }
