move auth hook and components to web-utils

--- a/packages/web-utils/tsconfig.json
+++ b/packages/web-utils/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "extends": "../../tsconfig.json",
     "include": [
-        "src"
+        "src/**/*"
     ],
     "compilerOptions": {
-        "outDir": "build"
+        "outDir": "build",
+        "jsx": "react-jsx",
+        "composite": false,
+        "emitDeclarationOnly": false,
+        "skipLibCheck": true
     }
 }
 
