--- a/packages/web-utils/package.json
+++ b/packages/web-utils/package.json
@@ -16,9 +16,9 @@
     "types": "build/index.d.ts",
     "exports": {
         ".": {
+            "types": "./build/index.d.ts",
             "import": "./build/index.js",
-            "require": "./build/index.cjs",
-            "types": "./build/index.d.ts"
+            "require": "./build/index.cjs"
         }
     },
     "files": [
@@ -30,7 +30,14 @@
         "prepack": "yarn clean && yarn build"
     },
     "sideEffects": false,
+    "peerDependencies": {
+        "react": ">=18.0.0",
+        "react-router-dom": ">=6.0.0"
+    },
     "devDependencies": {
+        "@types/react": "^19.1.13",
+        "react": "^19.1.1",
+        "react-router-dom": "^7.9.1",
         "rimraf": "^6.0.1",
         "tsup": "^8.5.0",
         "typescript": "^5.9.2"
