--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
         "lint:fix": "eslint . --ext .ts,.mts,.cts --fix"
     },
     "devDependencies": {
-        "@eslint/js": "^9.33.0",
-        "@stylistic/eslint-plugin": "^5.2.3",
+        "@igor-siergiej/eslint-config": "workspace:*",
         "eslint": "^9.33.0",
-        "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-simple-import-sort": "^12.1.1",
-        "eslint-plugin-unused-imports": "^4.1.4",
         "rimraf": "^6.0.1",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.39.0"
+        "tsup": "^8.3.0",
+        "typescript": "^5.6.3"
     }
 }
