--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,14 +2,14 @@
     "name": "@igor-siergiej/eslint-config",
     "version": "0.0.6",
     "description": "Shared ESLint configuration for IM Apps projects",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts",
+    "main": "build/index.js",
+    "module": "build/index.mjs",
+    "types": "build/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js"
+            "types": "./build/index.d.ts",
+            "import": "./build/index.mjs",
+            "require": "./build/index.js"
         }
     },
     "files": [
@@ -17,7 +17,7 @@
     ],
     "scripts": {
         "build": "tsup",
-        "clean": "rimraf dist",
+        "clean": "rimraf build",
         "prepublishOnly": "yarn build"
     },
     "devDependencies": {
