--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "packages/*"
     ],
     "scripts": {
-        "build": "yarn workspaces foreach -A run build",
+        "build": "yarn workspaces foreach -At run build",
         "clean": "yarn workspaces foreach -A run clean",
-        "lint": "eslint . --ext .ts,.mts,.cts",
-        "lint:fix": "eslint . --ext .ts,.mts,.cts --fix"
+        "lint": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts",
+        "lint:fix": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts --fix",
+        "prelint": "yarn workspace @igor-siergiej/eslint-config build",
+        "prelint:fix": "yarn workspace @igor-siergiej/eslint-config build"
     },
     "devDependencies": {
         "@igor-siergiej/eslint-config": "workspace:*",
