--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,8 +8,8 @@
     "exports": {
         ".": {
             "types": "./build/index.d.ts",
-            "import": "./build/index.mjs",
-            "require": "./build/index.js"
+            "require": "./build/index.js",
+            "import": "./build/index.mjs"
         }
     },
     "files": [
