--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-    "name": "im-apps-utils",
-    "private": true,
-    "version": "0.0.7",
-    "description": "Monorepo for shared utilities across IM Apps projects",
-    "packageManager": "yarn@4.9.2",
-    "workspaces": [
-        "packages/*"
-    ],
-    "scripts": {
-        "build": "yarn workspaces foreach -At run build",
-        "clean": "yarn workspaces foreach -A run clean",
-        "lint": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts",
-        "lint:fix": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts --fix",
-        "prelint": "yarn workspace @igor-siergiej/eslint-config build",
-        "prelint:fix": "yarn workspace @igor-siergiej/eslint-config build"
-    },
-    "devDependencies": {
-        "@igor-siergiej/eslint-config": "workspace:*",
-        "eslint": "^9.33.0",
-        "rimraf": "^6.0.1",
-        "tsup": "^8.3.0",
-        "typescript": "^5.6.3"
-    }
+  "name": "im-apps-utils",
+  "private": true,
+  "version": "0.0.7",
+  "description": "Monorepo for shared utilities across IM Apps projects",
+  "packageManager": "yarn@4.9.2",
+  "lint-staged": {
+    "*.{ts,mts,cts}": [
+      "yarn workspace @igor-siergiej/eslint-config build",
+      "eslint --fix"
+    ]
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "build": "yarn workspaces foreach -At run build",
+    "clean": "yarn workspaces foreach -A run clean",
+    "lint": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts",
+    "lint:fix": "yarn workspace @igor-siergiej/eslint-config build && eslint . --ext .ts,.mts,.cts --fix",
+    "prelint": "yarn workspace @igor-siergiej/eslint-config build",
+    "prelint:fix": "yarn workspace @igor-siergiej/eslint-config build",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@igor-siergiej/eslint-config": "workspace:*",
+    "eslint": "^9.33.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.0",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.3"
+  }
 }
