--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -113,8 +113,27 @@ jobs:
             echo "PAT_TOKEN is not set. Please configure secrets.PAT_TOKEN" >&2
             exit 1
           fi
-          # Publish all non-private workspaces in dependency order
-          yarn workspaces foreach -A --no-private --topological exec yarn npm publish --tolerate-republish
+
+          # List packages that will be published
+          echo "=== Packages to be published ==="
+          yarn workspaces foreach -A --no-private --topological exec echo "Publishing package at $(pwd)"
+
+          # Ensure all packages are built before publishing
+          echo "=== Building all packages ==="
+          yarn workspaces foreach -A --no-private run build || echo "Some packages may not have build scripts"
+
+          # Publish all non-private workspaces in dependency order with error handling
+          echo "=== Publishing packages ==="
+          yarn workspaces foreach -A --no-private --topological exec sh -c '
+            PKG_NAME=$(node -p "require(\"./package.json\").name")
+            echo "=== Publishing $PKG_NAME from $(pwd) ==="
+            if yarn npm publish --tolerate-republish; then
+              echo "✅ Successfully published $PKG_NAME"
+            else
+              echo "❌ Failed to publish $PKG_NAME"
+              exit 1
+            fi
+          '
 
       - name: Create and push tag for this release
         env:
