--- a/.github/workflows/gitops-update.yml
+++ b/.github/workflows/gitops-update.yml
@@ -17,7 +17,7 @@ on:
         required: true
 
 jobs:
-  update:
+  update-staging:
     runs-on: [self-hosted, linux, x64]
     if: github.ref == 'refs/heads/main'
     env:
@@ -52,7 +52,7 @@ jobs:
           git tag -f "${{ inputs.version }}"
           git push --force origin "refs/tags/${{ inputs.version }}"
 
-      - name: Update ArgoCD repo
+      - name: Update ArgoCD repo (staging)
         run: |
           git clone https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/igor-siergiej/argonaut.git argonaut-repo
           cd argonaut-repo
@@ -62,4 +62,29 @@ jobs:
           sed -i -E "s|^([[:space:]]*image:[[:space:]]*[^@]+):([^:@[:space:]]+)([[:space:]]*)$|\\1:${{ inputs.version }}\\3|" apps/${{ inputs.app_name }}/overlays/staging/patch-deployment.yaml
           git add apps/${{ inputs.app_name }}/overlays/staging/patch-deployment.yaml
           git commit -m "Update ${{ inputs.app_name }} staging to version ${{ inputs.version }}"
+          git push origin main
+
+  update-production:
+    runs-on: [self-hosted, linux, x64]
+    needs: update-staging
+    if: github.ref == 'refs/heads/main'
+    environment: production
+    env:
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Update ArgoCD repo (production)
+        run: |
+          git clone https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/igor-siergiej/argonaut.git argonaut-repo
+          cd argonaut-repo
+          git config user.email "argonaut-bot@users.noreply.github.com"
+          git config user.name "argonaut-bot"
+          # Replace the final tag on every image line; skip digest refs (with '@')
+          sed -i -E "s|^([[:space:]]*image:[[:space:]]*[^@]+):([^:@[:space:]]+)([[:space:]]*)$|\\1:${{ inputs.version }}\\3|" apps/${{ inputs.app_name }}/overlays/production/patch-deployment.yaml
+          git add apps/${{ inputs.app_name }}/overlays/production/patch-deployment.yaml
+          git commit -m "Update ${{ inputs.app_name }} production to version ${{ inputs.version }}"
           git push origin main
